# queequeg

./: .gitignore  Makefile  README.md  design.md  pyproject.toml
harpoon/: ast_utils.py  class_reconstructor.py  cli.py  dependency_extractor.py  graph.py  import_collector.py  import_resolver.py  mcp_server.py  parser.py  symbol_indexer.py
harpoon/serializers/: callers.py  code.py  json.py
queequeg/: caller_tracer.py  cli.py  graph.py  mcp_server.py  parser.py  tracer.py
queequeg/serializers/: code.py
tests/: test_ast_utils.py  test_caller_tracer.py  test_class_reconstructor.py  test_dependency_extractor.py  test_graph.py  test_import_collector.py  test_import_resolver.py  test_parser.py  test_serializers.py  test_symbol_indexer.py  test_tracer.py
tests/fixtures/: async_func.py  async_shadow.py  callee.py  circular.py  circular_a.py  circular_b.py  circular_user.py  class_init_order.py  classes.py  classmethod_dep.py  comp_free_var.py  comp_var_shadow.py  comp_var_then_outer_call.py  conditional_import.py  constructor_dep.py  constructor_in_loop.py  cross_file_a.py  cross_file_b.py  cross_file_child.py  cross_file_init_user.py  decorator_cross.py  decorators.py  deep_chain.py  dep_in_loop.py  dep_in_try.py  diamond.py  dict_comp_shadow.py  direct_caller.py  dynamic_all.py  dynamic_all_user.py  external_import.py  genexp_shadow.py  getattr_in_lambda.py  getattr_literal.py  importlib_import.py  importlib_nested.py  inline_import.py  inline_import_scope.py  inline_nested_scope.py  lambda_free_var.py  (+31 more)
tests/fixtures/mypackage/: __init__.py
tests/fixtures/reexport_pkg/: __init__.py  core.py
tests/fixtures/relpkg/: direct_user.py  user.py  utils.py
