[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harpoon"
version = "0.1.0"
description = "A static analysis MCP server that traces Python function and class dependencies across files for AI assistants."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Mostafa Nabil", email = "mostafa.nabil.nafie@gmail.com" }
]
keywords = ["mcp", "static-analysis", "ast", "dependencies", "ai", "code-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/hiddenwarrior/harpoon"
Repository = "https://github.com/hiddenwarrior/harpoon"
Issues = "https://github.com/hiddenwarrior/harpoon/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
harpoon = "harpoon.cli:main"
harpoon-mcp = "harpoon.mcp_server:main"
