[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["queequeg*"]

[project]
name = "queequeg"
version = "0.1.1"
description = "A static analysis MCP server that traces Python function and class dependencies across files for AI assistants."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Mostafa Nabil", email = "mostafa.nabil.nafie@gmail.com" }
]
keywords = ["mcp", "static-analysis", "ast", "dependencies", "ai", "code-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/hiddenWarrior/queequeg"
Repository = "https://github.com/hiddenWarrior/queequeg"
Issues = "https://github.com/hiddenWarrior/queequeg/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
queequeg = "queequeg.cli:main"
queequeg-mcp = "queequeg.mcp_server:main"
